--- a/Suaah/Suaah.csproj
+++ b/Suaah/Suaah.csproj
@@ -36,7 +36,37 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Areas\Admin\Views\AllHotelBookingHeaders\Delete.cshtml" />
+    <None Include="Areas\Admin\Views\AllHotelBookingHeaders\Details.cshtml" />
+    <None Include="Areas\Admin\Views\AllHotelBookingHeaders\Index.cshtml" />
+    <None Include="Areas\Admin\Views\HotelRooms\Create.cshtml" />
+    <None Include="Areas\Admin\Views\HotelRooms\Delete.cshtml" />
+    <None Include="Areas\Admin\Views\HotelRooms\Details.cshtml" />
+    <None Include="Areas\Admin\Views\HotelRooms\Edit.cshtml" />
+    <None Include="Areas\Admin\Views\HotelRooms\Index.cshtml" />
+    <None Include="Areas\Admin\Views\Hotels\Create.cshtml" />
+    <None Include="Areas\Admin\Views\Hotels\Delete.cshtml" />
+    <None Include="Areas\Admin\Views\Hotels\Details.cshtml" />
+    <None Include="Areas\Admin\Views\Hotels\Edit.cshtml" />
+    <None Include="Areas\Admin\Views\Hotels\Index.cshtml" />
+    <None Include="Areas\Admin\Views\Services\Create.cshtml" />
+    <None Include="Areas\Admin\Views\Services\Delete.cshtml" />
+    <None Include="Areas\Admin\Views\Services\Details.cshtml" />
+    <None Include="Areas\Admin\Views\Services\Edit.cshtml" />
+    <None Include="Areas\Admin\Views\Services\Index.cshtml" />
     <None Include="Areas\Customer\Views\FlightBookings\BookingManage.cshtml" />
+    <None Include="Areas\Customer\Views\Home\Index.cshtml" />
+    <None Include="Areas\Customer\Views\Home\Privacy.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\BookingConfirmation.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\Create.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\CustomerBooking.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\Delete.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\Details.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\Edit.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\EndBooking.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\Index.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\PendingReservation.cshtml" />
+    <None Include="Areas\Customer\Views\HotelBookings\Summary.cshtml" />
   </ItemGroup>
 
 </Project>
